--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.Android_Drupal_Sdk"
+          package="com.voidberg.drupaldroid"
           android:versionCode="1"
-          android:versionName="1.0">
+          android:versionName="1.1">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-sdk android:minSdkVersion="10"/>
 
-    <uses-sdk android:minSdkVersion="16"/>
-
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="DrupalActivity"
-                  android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
+    <application android:name="drupaldroid">
     </application>
 </manifest>
